added h1 and h2 html and css

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     ></script>
   </head>
   <body>
-    hello
+    <h1>JONALYN FUENTES CALIBAT</h1>
+    <h2>LEAD GENERATION MANAGER</h2>
   </body>
 </html>
