--- a/index.html
+++ b/index.html
@@ -15,11 +15,17 @@
     <link rel="stylesheet" href="style.css" />
 
     <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <script
       src="https://kit.fontawesome.com/4981a44a7d.js"
       crossorigin="anonymous"
     ></script>
   </head>
   <body>
+    <img src="images/jcalibatphoto.jpg" class="img-fluid" alt="" />
     <h1>JONALYN FUENTES CALIBAT</h1>
     <h2>LEAD GENERATION MANAGER</h2>
   </body>
