--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jonalyn Calibat VA Portfolio</title>
 
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -25,8 +31,16 @@
     ></script>
   </head>
   <body>
-    <img src="images/jcalibatphoto.jpg" class="img-fluid" alt="" />
-    <h1>JONALYN FUENTES CALIBAT</h1>
-    <h2>LEAD GENERATION MANAGER</h2>
+    <div class="container">
+      <div class="row">
+        <div class="col-6">
+          <img src="images/jcalibatphoto.jpg" class="img-fluid" alt="" />
+        </div>
+        <div class="col-6">
+          <h1>JONALYN FUENTES CALIBAT</h1>
+          <h2>LEAD GENERATION MANAGER</h2>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
